2003-02-09  John R. Jackson (jrj@purdue.edu)

	* tape-src/tapetype.c: Allocate the I/O buffers on page boundaries.
	  This helps performance on some OS's.

2003-02-08  John R. Jackson (jrj@purdue.edu)

	* restore-src/amrestore.c: Clean up strtol() argument processing.

2003-02-08  John R. Jackson (jrj@purdue.edu)

	* docs/INSTALL: Clean up supporting package versions and URL's.

2003-02-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/Makefile.am (pkgdata_DATA): Add HOWTO-CYGWIN.html.

2003-02-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Christophe Kalt <kalt@taranis.org>

	* client-src/sendbackup-dump.c: New AM_SIZE_RE for NetApp.
	* client-src/sendsize.c: New re_size for NetApp.

2003-02-04  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Fix by Colin Henein <cmh@orange-carb.org>

	* common-src/amanda.h: Fix for the where S_ISDIR is not defined.

2003-02-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Doug Kingston <dpk@randomnotes.org>

	* configure.in (NEED_SETUID_CLIENT): Set to false on *-pc-cygwin.
	* configure.in (WANT_SETUID_CLIENT): Set if NEED_SETUID_CLIENT != false.
	* client-src/Makefile.am: Don't chmod u+s if WANT_SETUID_CLIENT.

2003-02-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Andrew Rucker Jones <arjones@simultan.dyndns.org>

	* man/amtapetype.8.in: Fix example.

2003-01-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amanda.h: #define S_ISDIR if not already defined.

2003-01-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	File from Doug Kingston <dpk@randomnotes.org>

	* docs/HOWTO-CYGWIN.html: New file.

2003-01-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Define WANT_RUNTIME_PSEUDO_RELOC on cygwin
	* client-src/Makefile.am: AM_LDFLAGS="-Wl,-enable-runtime-pseudo-reloc"
	  if WANT_RUNTIME_PSEUDO_RELOC.
	* recover-src/Makefile.am: Ditto.

2003-01-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>
